--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CS4241 - Webware Final Project Proposal Group 11 Names: Jack Ayvazian, Jack Campanale, Federico Galbiati, Winnie Ly, Vansh Patel",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,10 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mime": "^2.5.2",
     "mongodb": "^4.1.2",
     "passport": "^0.5.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "path": "^0.12.7"
   }
 }
