--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "snowpack build",
+    "clean": "rm dist/bundle.js",
+    "dev": "snowpack dev"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,11 @@
     "mongodb": "^4.1.2",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "snowpack": "^3.8.8"
   }
 }
