--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/theaniartist/final_project#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mime": "^2.5.2",
     "mongodb": "^4.1.2",
     "passport": "^0.5.0",
