--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/theaniartist/final_project#readme",
   "dependencies": {
+    "animejs": "^3.2.1",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "dotenv": "^10.0.0",
@@ -32,7 +33,8 @@
     "passport-github2": "^0.1.12",
     "path": "^0.12.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-native": "^0.66.0"
   },
   "devDependencies": {
     "snowpack": "^3.8.8"
